--- a/LoginAPIs/appsettings.json
+++ b/LoginAPIs/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=localhost\\MSSQLSERVER01;Database=UserDetails;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SqlConnectionString": "Server=server_name;Database=db;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
